--- a/template_A4h.tex
+++ b/template_A4h.tex
@@ -1,86 +1,70 @@
-
-
-
-% das Papierformat zuerst
-\documentclass[a4paper, 11pt]{article}
-
-\usepackage[left=35mm,right=25mm,top=15mm,bottom=10mm,includeheadfoot]{geometry}
-
-% hier beginnt das Dokument
-\begin{document}
-	
-	% hier beginnt die Titelseite
-	\begin{titlepage}
-		
-		\begin{center}
-			
-			
-			% Oberer Teil der Titelseite:
-			%\includegraphics[width=0.15\textwidth]{./logo}\\[1cm]    
-			
-			\textsc{\LARGE University of Beer}\\[1.5cm]
-			
-			\textsc{\Large Final year project}\\[0.5cm]
-			
-			
-			% Title
-			\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-			\HRule \\[0.4cm]
-			{ \huge \bfseries Lager brewing techniques}\\[0.4cm]
-			
-			\HRule \\[1.5cm]
-			
-			% Author and supervisor
-			\begin{minipage}{0.4\textwidth}
-				\begin{flushleft} \large
-					\emph{Autor:}\\
-					David \textsc{Grimbichler}
-				\end{flushleft}
-			\end{minipage}
-			\hfill
-			\begin{minipage}{0.4\textwidth}
-				\begin{flushright} \large
-					\emph{Supervisor:} \\
-					Dr.~Mark \textsc{Brown}
-				\end{flushright}
-			\end{minipage}
-			
-			\vfill
-			
-			% Unterer Teil der Seite
-			{\large \today}
-			
-		\end{center}
-		
-	\end{titlepage}
-
-
-% Inhaltsverzeichnis anzeigen
-\tableofcontents
-
-% Kapitel soll auf naechster Seite beginnen
-\newpage
-
-% Kapitelueberschrift
-\section{Einleitung}
-
-% Ueberschrift eines Abschnittes
-\subsection{Motivation}
-
-Dies ist ein Satz.
-
-% Ueberschrift eines Abschnittes
-\subsection{Abgrenzung}
-
-Dies ist ein Satz.
-
-% Kapitel soll auf naechster Seite beginnen
-\newpage
-
-% Kapitelueberschrift
-\section{Theoretische Betrachtungen}
-
-Dies ist ein Satz.
-
-% das ist wohl jetzt das Ende des Dokumentes
+% das Papierformat zuerst
+\documentclass[a4paper, 11pt]{article}
+\usepackage[left=35mm,right=25mm,top=15mm,bottom=10mm,includeheadfoot]{geometry}
+
+% hier beginnt das Dokument
+\begin{document}
+	% hier beginnt die Titelseite
+	\begin{titlepage}
+
+		\begin{center}
+			% Oberer Teil der Titelseite:
+			%\includegraphics[width=0.15\textwidth]{./logo}\\[1cm]    
+			\textsc{\LARGE University of GrimbiXcode}\\[1.5cm]
+			\textsc{\Large Final year project}\\[0.5cm]
+
+			% Title
+			\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+			\HRule \\[0.4cm]
+			{ \huge \bfseries The reason of our Universe}\\[0.4cm]
+			\HRule \\[1.5cm]
+			% Author and supervisor
+			\begin{minipage}{0.4\textwidth}
+				\begin{flushleft} \large
+					\emph{Author:}\\
+					David \textsc{Grimbichler}
+				\end{flushleft}
+			\end{minipage}
+			\hfill
+			\begin{minipage}{0.4\textwidth}
+				\begin{flushright} \large
+					\emph{Supervisor:} \\
+					Dr.~Dojo \textsc{Code}
+				\end{flushright}
+			\end{minipage}
+			\vfill
+			% Unterer Teil der Seite
+			{\large \today}
+
+		\end{center}
+	\end{titlepage}
+
+% Inhaltsverzeichnis anzeigen
+\tableofcontents
+
+% Kapitel soll auf naechster Seite beginnen
+\newpage
+
+% Kapitelueberschrift
+\section{Einleitung}
+
+% Ueberschrift eines Abschnittes
+\subsection{Motivation}
+
+Dies ist ein Satz.
+
+% Ueberschrift eines Abschnittes
+\subsection{Abgrenzung}
+
+Dies ist ein Satz.
+
+% Kapitel soll auf naechster Seite beginnen
+\newpage
+
+% Kapitelueberschrift
+\section{Theoretische Betrachtungen}
+
+Dies ist ein Satz.
+
+% Ende des Dokumentes
 \end{document}
