Add option to rename the table of content

--- a/template_A4h.tex
+++ b/template_A4h.tex
@@ -39,6 +39,8 @@
 		\end{center}
 	\end{titlepage}
 
+% Inhaltsverzeichnis neu Benennen
+\renewcommand{\contentsname}{Inhalt}
 % Inhaltsverzeichnis anzeigen
 \tableofcontents
 
